# FireworkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
converter/: CMakeLists.txt  convert.cpp  process_image.hpp  process_mesh.hpp
editor/: CMakeLists.txt  edit.cpp
editor/runtime/: editor_camera.hpp  editor_loop.cpp  editor_loop.hpp  editor_ui.cpp  editor_ui.hpp  engine.cpp  engine.hpp  parse_args.hpp
editor/runtime/ui/: component_panel.cpp  component_panel.hpp  material_panel.cpp  material_panel.hpp  mesh_panel.cpp  mesh_panel.hpp  scene_tree.cpp  scene_tree.hpp  scene_view.cpp  scene_view.hpp  texture_panel.cpp  texture_panel.hpp
editor/runtime/ui/parts/: imgui_utils.cpp  imgui_utils.hpp  modal.cpp  modal.hpp
engine/: CMakeLists.txt
engine/core/: input.cpp  input.hpp  keycodes.hpp  logger.hpp  loop.cpp  loop.hpp  native_script.hpp  rate_limiter.hpp  settings.hpp  util.hpp
engine/core/types/: editor_data.hpp  image2d.cpp  image2d.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp
engine/render/: datatypes.hpp  deletion_helpers.hpp  framebuffer.hpp  renderer.cpp  renderer.hpp  shader_attribs.hpp
engine/render/fonts/: JetBrains-Mono-Regular-Nerd.hpp  NotoSans-Regular.hpp  codepoint.hpp
engine/render/render_api/: render_api.cpp  render_api.hpp  render_api_none.hpp
engine/render/render_api/opengl/: opengl_window.hpp  render_api_opengl.cpp  render_api_opengl.hpp
engine/render/render_data/: buffer.hpp  builtin_primitives.hpp  builtin_shaders.hpp  framebuffer.hpp  framebuffer_screen.hpp  renderbuffer.hpp  shader_program.cpp  shader_program.hpp  texture2d.hpp  vertex_array.hpp
engine/scene/: component_camera.hpp  component_loader.hpp  component_mesh.hpp  component_nativescript.hpp  component_tag.hpp  component_transform.hpp  component_ui_controller.hpp  components.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
engine/scene/components/: component_camera.hpp  component_material.hpp  component_mesh.hpp  component_mesh_renderer.hpp  component_nativescript.hpp  component_tag.hpp  component_transform.hpp
engine/serialize/: Makefile  compression.hpp  entity.capnp  entity.capnp.c++  entity.capnp.h  image.capnp  image.capnp.c++  image.capnp.h  material.capnp  material.capnp.c++  material.capnp.h  mesh.capnp  mesh.capnp.c++  mesh.capnp.h  scene.capnp  scene.capnp.c++  scene.capnp.h  scene_serializer.cpp  scene_serializer.hpp  vec_readers.hpp  vector.capnp  vector.capnp.c++  vector.capnp.h
engine/vfs/: loader.cpp  loader.hpp  vfs.hpp
kenopsia/shaders/: frag.glsl  vert.glsl
player/: CMakeLists.txt  player.cpp
python/: voxel_mesh.py
tests/: CMakeLists.txt  sanity_check.cpp
tests/core/: scene.hpp
tests/core/serialize/: scene_serialize.cpp
